[tool.poetry]
name = "onnx-modifier"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
onnx = "^1.16.1"
Flask = "^3.0.3"
onnx-tool = "^0.9.0"

[tool.poetry.scripts]
app = "app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
